--- a/ClientApp/src/app/modules/master/customer/customer-list/customer-list.component.html
+++ b/ClientApp/src/app/modules/master/customer/customer-list/customer-list.component.html
@@ -37,9 +37,9 @@
 
                       <td data-title="Actions" class="action text-center actions-td">
                         <div class="d-flex justify-content-center">
-                            <a href="javascript:void(0)"> <i class="far fa-edit orange" placement="top"
+                            <a *ngIf="sharedService.getRoleId()==1" href="javascript:void(0)"> <i class="far fa-edit orange" placement="top"
                                     ngbTooltip="View/Edit" (click)="addClientPopup(customer)"></i></a>
-                            <a href="javascript:void(0)">
+                            <a *ngIf="sharedService.getRoleId()==1" href="javascript:void(0)">
                                 <i class="far fa-trash-alt orange" placement="top"
                                  ngbTooltip="Delete" (click)="openDelete(content,customer)"></i></a>
                         </div>
