--- a/ClientApp/src/app/modules/inward-material/outward-list/outward-list.component.html
+++ b/ClientApp/src/app/modules/inward-material/outward-list/outward-list.component.html
@@ -30,7 +30,7 @@
               <td data-title="Service Amount" class="text-right">{{ _outward.serviceAmount }} /-</td>
               <td data-title="Actions" class="action text-center actions-td">
                 <div class="d-flex justify-content-center">
-                  <a href="javascript:void(0)">
+                  <a *ngIf="sharedService.getRoleId()==1" href="javascript:void(0)">
                     <i class="far fa-edit orange" placement="top"
                        ngbTooltip="Edit" (click)="addOutwardPopup(_outward)"></i>
                   </a>
@@ -38,7 +38,7 @@
                     <i class="fas fa-print orange" placement="top"
                        ngbTooltip="Outward Print" (click)="printOutward(_outward.outwardId)"></i>
                   </a>
-                  <a href="javascript:void(0)">
+                  <a *ngIf="sharedService.getRoleId()==1" href="javascript:void(0)">
                     <i class="far fa-trash-alt orange" placement="top"
                        ngbTooltip="Delete" (click)="openDelete(content,_outward)"></i>
                   </a>
