--- a/ClientApp/src/app/modules/payment/lumpsum/lumpsum.component.html
+++ b/ClientApp/src/app/modules/payment/lumpsum/lumpsum.component.html
@@ -28,7 +28,7 @@
               <td data-title="Service Amount" class="text-right">{{ _lumpsum.paidAmount }} /-</td>
               <td data-title="Actions" class="action text-center actions-td">
                 <div class="d-flex justify-content-center">
-                  <a href="javascript:void(0)">
+                  <a *ngIf="sharedService.getRoleId()==1" href="javascript:void(0)">
                     <i class="far fa-edit orange" placement="top"
                        ngbTooltip="Edit" (click)="addLumpsumPopup(_lumpsum)"></i>
                   </a>
@@ -36,7 +36,7 @@
                     <i class="fas fa-print orange" placement="top"
                        ngbTooltip="Lumpsum Print" (click)="printLumpsum(_lumpsum.lumpsumId)"></i>
                   </a>
-                  <a href="javascript:void(0)">
+                  <a *ngIf="sharedService.getRoleId()==1" href="javascript:void(0)">
                     <i class="far fa-trash-alt orange" placement="top"
                        ngbTooltip="Delete" (click)="openDelete(content,_lumpsum)"></i>
                   </a>
