--- a/ClientApp/src/app/modules/inward-material/bill-generation/bill-generation.component.html
+++ b/ClientApp/src/app/modules/inward-material/bill-generation/bill-generation.component.html
@@ -205,7 +205,7 @@
             <div class="form-group">
               <div class="input-group datepicker">
                 <label class="date-label">Bill Date</label>
-                <input autocomplete="new"  class="form-control" placeholder="dd-mm-yyyy" [(ngModel)]="bill.ngbBillDate" name="dp"
+                <input autocomplete="new"  [maxDate]="maxDate"  class="form-control" placeholder="dd-mm-yyyy" [(ngModel)]="bill.ngbBillDate" name="dp"
                        ngbDatepicker
                        #d1="ngbDatepicker" (click)="d1.toggle()" formControlName="billDate">
                 <div class="input-group-append">
