--- a/ClientApp/src/app/modules/reports/bill-report/bill-report.component.html
+++ b/ClientApp/src/app/modules/reports/bill-report/bill-report.component.html
@@ -32,7 +32,7 @@
                         <div class="form-group">
                             <div class="input-group datepicker">
                                 <label class="date-label">From Date</label>
-                                <input autocomplete="new"  class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="searchModel.reportFromDate"  placeholder="dd-mm-yyyy" name="dp"
+                                <input autocomplete="new"  [maxDate]="maxDate" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="searchModel.reportFromDate"  placeholder="dd-mm-yyyy" name="dp"
                                 ngbDatepicker
                                     #d1="ngbDatepicker" (click)="d1.toggle()">
                                 <div class="input-group-append">
@@ -47,7 +47,7 @@
                         <div class="form-group">
                             <div class="input-group datepicker">
                                 <label class="date-label">To Date</label>
-                                <input autocomplete="new"  class="form-control" [ngModelOptions]="{standalone: true}"  placeholder="dd-mm-yyyy" name="dp"
+                                <input autocomplete="new"  [maxDate]="maxDate" class="form-control" [ngModelOptions]="{standalone: true}"  placeholder="dd-mm-yyyy" name="dp"
                                 ngbDatepicker [(ngModel)]="searchModel.reportToDate"
                                     #d2="ngbDatepicker" (click)="d2.toggle()">
                                 <div class="input-group-append">
