--- a/ClientApp/src/app/modules/reports/account-statement/account-statement.component.scss
+++ b/ClientApp/src/app/modules/reports/account-statement/account-statement.component.scss
@@ -55,7 +55,8 @@
 	border: 0px solid #dee2e6;
  
 	tr th, tr td {
-		border: 0px solid #dee2e6;
+        border: 0px solid #dee2e6;
+        padding: 5px 5px !important;
     }
     tr th {
         border-top: 0.0625rem solid #d7d7d7 !important;
