--- a/ClientApp/src/assets/scss/components/_side-nav.scss
+++ b/ClientApp/src/assets/scss/components/_side-nav.scss
@@ -47,12 +47,15 @@
           font-size: 0.875rem;
           line-height: 1;
           vertical-align: middle;
+          &.sms-title {
+            margin-left: 12px!important;
+          }
         }
         i {
           font-size: 1.125rem;
           line-height: 1;
-          margin-left: 18px;
-    margin-right: 22px;
+          margin-left: 20px;
+          margin-right: 25px;
           color: #b8c7ce;
         }
         .menu-arrow {
