bank name added

--- a/ClientApp/src/app/modules/inward-material/outward-print/outward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/outward-print/outward-print.component.html
@@ -62,12 +62,12 @@
       background: #f5f5f5; float: left; width: 100%;">
         <p style="margin:0; font-weight:500; font-size: 14px; float:left">
           <strong>Contact</strong>: 9850985846, 9850968828, 9850968829
-         
+
         </p>
         <h6 class="float-right"><strong>GST No. :</strong> 27CBWPS9849E1ZK</h6>
         <br>
-        <p  style="margin:0; font-size: 14px;float: left; width: 100%;"><strong>Please Note:</strong> Composition Taxable Person, Not Eligible to Collect Tax on Supplies</p>
-  
+        <p style="margin:0; font-size: 14px;float: left; width: 100%;"><strong>Please Note:</strong> Composition Taxable Person, Not Eligible to Collect Tax on Supplies</p>
+
       </div>
     </div>
 
@@ -79,20 +79,20 @@
           background: transparent;
           font-size: 12px;
           line-height: 18px; vertical-align: top; text-align:left">
-           <table style="width: 100%;">
-            <tr>
-              <td style="width:30%; padding:5px 0 !important;"><strong>Customer Name:</strong></td>
-              <td style="padding:5px 0 !important;">{{outward.customerName}}</td>
-            </tr>
-            <tr>
-              <td style="width:30%; padding:5px 0 !important;"><strong>Customer Address:</strong></td>
-              <td style="padding:5px 0 !important;">{{outward.customerAddress}}</td>
-            </tr>
-            <tr>
-              <td style="padding:5px 0 !important;"><strong>GST #:</strong></td>
-              <td style="padding:5px 0 !important;">{{outward.gstNo}}</td>
-            </tr>
-          </table>
+            <table style="width: 100%;">
+              <tr>
+                <td style="width:30%; padding:5px 0 !important;"><strong>Customer Name:</strong></td>
+                <td style="padding:5px 0 !important;">{{outward.customerName}}</td>
+              </tr>
+              <tr>
+                <td style="width:30%; padding:5px 0 !important;"><strong>Customer Address:</strong></td>
+                <td style="padding:5px 0 !important;">{{outward.customerAddress}}</td>
+              </tr>
+              <tr>
+                <td style="padding:5px 0 !important;"><strong>GST #:</strong></td>
+                <td style="padding:5px 0 !important;">{{outward.gstNo}}</td>
+              </tr>
+            </table>
           </td>
 
           <td colspan="2" style="padding: 5px 5px;
@@ -246,6 +246,10 @@
         </td>
       </tr>
     </table>
+    <p style="padding: 0;
+          background: transparent;
+          font-size: 12px;
+          line-height: 18px; vertical-align: top; margin:0; text-align:left"><strong>Bank Name:</strong> {{outward.bankNamePrint}}</p>
     <p style="padding: 0;
           background: transparent;
           font-size: 12px;
