--- a/ClientApp/src/app/modules/inward-material/bill-print/bill-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/bill-print/bill-print.component.html
@@ -62,12 +62,12 @@
       background: #f5f5f5; float: left; width: 100%;">
         <p style="margin:0; font-weight:500; font-size: 14px; float:left">
           <strong>Contact</strong>: 9850985846, 9850968828, 9850968829
-         
+
         </p>
         <h6 class="float-right"><strong>GST No. :</strong> 27CBWPS9849E1ZK</h6>
         <br>
-        <p  style="margin:0; font-size: 14px;float: left; width: 100%;"><strong>Please Note:</strong> Composition Taxable Person, Not Eligible to Collect Tax on Supplies</p>
-  
+        <p style="margin:0; font-size: 14px;float: left; width: 100%;"><strong>Please Note:</strong> Composition Taxable Person, Not Eligible to Collect Tax on Supplies</p>
+
       </div>
     </div>
 
@@ -248,6 +248,10 @@
         </td>
       </tr>
     </table>
+    <p style="padding: 0;
+          background: transparent;
+          font-size: 12px;
+          line-height: 18px; vertical-align: top; margin:0; text-align:left"><strong>Bank Name:</strong> {{bill.bankNamePrint}}</p>
     <p style="padding: 0;
           background: transparent;
           font-size: 12px;
