--- a/Views/PDF/PrintBill.cshtml
+++ b/Views/PDF/PrintBill.cshtml
@@ -54,26 +54,26 @@
             margin: 0 0 10px 0;
             text-align: left;">Computers</p>
                         </td>
-                         <td style="padding:0; background: transparent; width: 50%; text-align: right;font-size: 14px;">
-              Gangapur Road, Nashik 422002.
-            </td>
+                        <td style="padding:0; background: transparent; width: 50%; text-align: right;font-size: 14px;">
+                            Gangapur Road, Nashik 422002.
+                        </td>
                     </tr>
                 </table>
             </div>
-              <div class="address" style=" border-top: 1px solid #C1CED9;
+            <div class="address" style=" border-top: 1px solid #C1CED9;
       border-bottom: 1px solid #C1CED9;
       margin: 0 0 0px 0;
       padding: 7px;
       background: #f5f5f5; float: left; width: 100%;">
-        <p style="margin:0; font-weight:500; font-size: 14px; float:left">
-          <strong>Contact</strong>: 9850985846, 9850968828, 9850968829
-         
-        </p>
-        <h6 class="float-right"><strong>GST No. :</strong> 27CBWPS9849E1ZK</h6>
-        <br>
-        <p  style="margin:0; font-size: 14px;float: left; width: 100%;"><strong>Please Note:</strong> Composition Taxable Person, Not Eligible to Collect Tax on Supplies</p>
-  
-      </div>
+                <p style="margin:0; font-weight:500; font-size: 14px; float:left">
+                    <strong>Contact</strong>: 9850985846, 9850968828, 9850968829
+
+                </p>
+                <h6 class="float-right"><strong>GST No. :</strong> 27CBWPS9849E1ZK</h6>
+                <br>
+                <p style="margin:0; font-size: 14px;float: left; width: 100%;"><strong>Please Note:</strong> Composition Taxable Person, Not Eligible to Collect Tax on Supplies</p>
+
+            </div>
         </div>
 
 
@@ -263,6 +263,10 @@
                 </td>
             </tr>
         </table>
+        <p style="padding: 0;
+          background: transparent;
+          font-size: 12px;
+          line-height: 18px; vertical-align: top; margin:0; text-align:left"><strong>Bank Name:</strong> @Model.bankNamePrint</p>
         <p style="padding: 0;
           background: transparent;
           font-size: 12px;
