--- a/ClientApp/src/app/modules/inward-material/outward-print/outward-print.component.html
+++ b/ClientApp/src/app/modules/inward-material/outward-print/outward-print.component.html
@@ -61,7 +61,7 @@
       padding: 7px;
       background: #f5f5f5; float: left; width: 100%;">
         <p style="margin:0; font-weight:500; font-size: 14px; float:left">
-          <strong>Contact</strong>: 9850985846, 9850968828, 9850968829
+          <strong>Contact</strong>: 9850985846, 9850968828
 
         </p>
         <h6 class="float-right"><strong>GST No. :</strong> 27CBWPS9849E1ZK</h6>
@@ -249,6 +249,10 @@
     <p style="padding: 0;
           background: transparent;
           font-size: 12px;
+          line-height: 18px; vertical-align: top; margin:0; text-align:left"><strong>A/c Name:</strong> Gopal Computers</p>
+    <p style="padding: 0;
+          background: transparent;
+          font-size: 12px;
           line-height: 18px; vertical-align: top; margin:0; text-align:left"><strong>Bank Name:</strong> {{outward.bankNamePrint}}</p>
     <p style="padding: 0;
           background: transparent;
@@ -261,7 +265,7 @@
     <p style="padding: 0;
           background: transparent;
           font-size: 12px;
-          line-height: 18px; vertical-align: top;margin:0; text-align:left"><strong>Gpay:</strong> {{outward.gPayPrint}}</p>
+          line-height: 18px; vertical-align: top;margin:0; text-align:left"><strong>Gpay/PhonePay:</strong> {{outward.gPayPrint}}</p>
   </main>
 
 
