--- a/Views/PDF/PrintLumpsum.cshtml
+++ b/Views/PDF/PrintLumpsum.cshtml
@@ -66,7 +66,7 @@
       padding: 7px;
       background: #f5f5f5; float: left; width: 100%;">
         <p style="margin:0; font-weight:500; font-size: 14px; float:left">
-          <strong>Contact</strong>: 9850985846, 9850968828, 9850968829
+          <strong>Contact</strong>: 9850985846, 9850968828
          
         </p>
         <h6 class="float-right"><strong>GST No. :</strong> 27CBWPS9849E1ZK</h6>
