--- a/ClientApp/src/app/modules/inward-material/add-inward/add-inward.component.html
+++ b/ClientApp/src/app/modules/inward-material/add-inward/add-inward.component.html
@@ -496,7 +496,7 @@
         <ngb-alert *ngIf="errorMessage" type="danger" (close)="errorMessage = null" class="text-left" >{{ errorMessage }}</ngb-alert>
 
 
-          <button class="btn btn-secondary" (click)="GoToInwardList()" >Cancel</button>
+          <button type="button" class="btn btn-secondary" (click)="GoToInwardList()" >Cancel</button>
           <button type="button"  (click)="PrintInward()" *ngIf="inward.inwardId>0" class="btn btn-success">
               Print Inward
           </button>
