--- a/ClientApp/src/app/modules/inward-material/inward/inward.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward/inward.component.html
@@ -111,22 +111,24 @@
           <table id="print-section" [hidden]="!hideTable" class="table row-border hover">
             <thead>
               <tr>
+                <th style="width: 15%;">Inward Date</th>
                 <th style="width: 10%;">Job No#</th>
                 <th style="width: 15%;">Company Name</th>
                 <th style="width: 10%;">Model No</th>
+                <th style="width: 10%;">Mat Comp Name</th>
                 <th style="width: 15%;">Is Repaired</th>
-                <th style="width: 15%;">Inward Date</th>
-                <th style="width: 20%;">Bill/Outward Status</th>
+                <th style="width: 10%;">Bill/Outward Status</th>
                 <th style="width: 15%;" class="text-center actions-td cursor">Action</th>
               </tr>
             </thead>
             <tbody *ngIf="inwards?.length != 0">
               <tr *ngFor="let inward of inwards">
+                <td data-title="Inward Date">{{ inward.deliveryDate | date: 'dd/MM/yyyy' }}</td>
                 <td data-title="Job No">{{ inward.inwardId }}</td>
                 <td data-title="Customer Name">{{ inward.clientName }}</td>
                 <td data-title="Model No">{{ inward.modelNo }}</td>
+                <td data-title="Mat Comp Name">{{ inward.companyName }}</td>
                 <td data-title="Is Repaired">{{getRepairedStatusesById(inward.isRepaired)}}</td>
-                <td data-title="Inward Date">{{ inward.deliveryDate | date: 'dd/MM/yyyy' }}</td>
                 <td data-title="Bill/Outward Status">{{ inward.outwardBillStatus}}</td>
                 <td data-title="Actions" class="action text-center actions-td">
                   <div class="d-flex justify-content-center">
@@ -156,24 +158,26 @@
           <table [hidden]="hideTable" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border hover">
             <thead>
               <tr>
-
+                <th style="width: 15%;">Inward Date</th>
                 <th style="width: 10%;">Job No#</th>
                 <th style="width: 15%;">Company Name</th>
                 <th style="width: 10%;">Model No</th>
+                <th style="width: 10%;">Mat Comp Name</th>
                 <th style="width: 15%;">Is Repaired</th>
-                <th style="width: 15%;">Inward Date</th>
-                <th style="width: 20%;">Bill/Outward Status</th>
+
+                <th style="width: 10%;">Bill/Outward Status</th>
                 <th style="width: 15%;" class="text-center actions-td cursor">Action</th>
               </tr>
             </thead>
             <tbody *ngIf="inwards?.length != 0">
               <tr *ngFor="let inward of inwards">
-
+                <td data-title="Inward Date">{{ inward.deliveryDate | date: 'dd/MM/yyyy' }}</td>
                 <td data-title="Job No">{{ inward.inwardId }}</td>
                 <td data-title="Customer Name">{{ inward.clientName }}</td>
                 <td data-title="Model No">{{ inward.modelNo }}</td>
+                <td data-title="Mat Comp Name">{{ inward.companyName }}</td>
                 <td data-title="Is Repaired">{{getRepairedStatusesById(inward.isRepaired)}}</td>
-                <td data-title="Inward Date">{{ inward.deliveryDate | date: 'dd/MM/yyyy' }}</td>
+
                 <td data-title="Bill/Outward Status">{{ inward.outwardBillStatus}}</td>
                 <td data-title="Actions" class="action text-center actions-td">
                   <div class="d-flex justify-content-center">
